CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_eligty_income_other__x.object
<CustomObject>
    <description>batchsit$t_indiv_eligty_income_other</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_indiv_eligty_income_other</externalName>
    <fields>
        <fullName>amt_income_annual__c</fullName>
        <description>amt_income_annual</description>
        <externalDeveloperName>amt_income_annual</externalDeveloperName>
        <label>Amount income other Annual</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_income__c</fullName>
        <description>cde_source_income</description>
        <externalDeveloperName>cde_source_income</externalDeveloperName>
        <label>Code income source</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Identifier Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_income_other1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Eligity Family Compsn ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Other Income</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_income_other</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_income_other__c</fullName>
        <description>idn_income_other</description>
        <externalDeveloperName>idn_income_other</externalDeveloperName>
        <label>Identifier Other Income</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_indiv_eligty_income_other__c</fullName>
        <description>idn_indiv_eligty_income_other</description>
        <externalDeveloperName>idn_indiv_eligty_income_other</externalDeveloperName>
        <label>Indiv Eligity Income Other ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn__c</fullName>
        <description>idn_indiv_fcompsn</description>
        <externalDeveloperName>idn_indiv_fcompsn</externalDeveloperName>
        <label>Identifier Eligity Family Composition</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_indiv_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility Other Income</relationshipLabel>
        <relationshipName>batchsit_t_indiv_eligty_income_other</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>LastModifiedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_indiv_eligty_income_other</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <label>Individual Eligibility Other Income</label>
    <pluralLabel>Individual Eligibility Other Income</pluralLabel>
</CustomObject>